[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui.gd" id="1"]

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 12.0
offset_top = 12.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]

[node name="HealthLabel" type="Label" parent="MarginContainer/VBoxContainer"]
text = "HP: 0 / 0"

[node name="WaveLabel" type="Label" parent="MarginContainer/VBoxContainer"]
text = "Wave 0"

[node name="GameOverLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.0
offset_top = -40.0
offset_right = 140.0
offset_bottom = 60.0
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
theme_override_font_sizes/font_size = 28

[node name="HintLabel" type="Label" parent="Overlay/CenterContainer/VBoxContainer"]
text = "Premi R per ricominciare"
horizontal_alignment = 1
